feat: add company logo to seismic importer dialog and update UI layout

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/plugins/seismic_importer" >
         <file>icon.png</file>
+        <file>company_logo.png</file>
     </qresource>
 </RCC>
